--- a/assets/scss/blog/the-daily-campus.scss
+++ b/assets/scss/blog/the-daily-campus.scss
@@ -1,3 +1,7 @@
+html {
+  overflow-x: hidden;
+}
+
 #problem-container, #impact-container{
     background-color: $blue;
     border-radius: 16px;
@@ -8,7 +12,6 @@
 #context-text{
     color: $brown;
 }
-
 
 #context-img-container{
   margin-top: 1rem;
